2005-12-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Set the correct version for .net 2 assemblies.
		Correctly write embedded resources.
		Fix #76963.

2005-12-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/MethodSpecification.cs:
		Override the declaring type and the name property to
		match the inner method.
	* Mono.Cecil/GenericInstanceType.cs:
		Correctly set the FullName.
	* Mono.Cecil/GenericInstanceMethod.cs:
		Style.

2005-12-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeDefinition.cs:
		Fix interface import. Patch by Thomas Gil.

2005-11-24  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/templates/MetadataTableReader.cs
	  CodeGen/templates/PEFileHeader.cs
	  CodeGen/templates/CLIHeader.cs
	  CodeGen/templates/PEOptionalHeader.cs
	  CodeGen/templates/Table.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/OpCodes.cs
	  CodeGen/templates/Section.cs
	  CodeGen/templates/ImageReader.cs:
		Update the codegen engine so that everyone can run it
		without having to install a dependency (eruby).

	* Mono.Cecil.Metadata/Utilities.cs: re-codegenerated.

2005-11-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IGenericArgumentProvider.cs
		Style.
	* CodeGen/cecil.xml:
		Mirror Martin's change in the codegen engine.

2005-11-23  Martin Baulig  <martin@ximian.com>

	Generics API changes:
	TypeReference and MethodReference now contain a
	`GenericArguments' property (of type `GenericArgumentCollection')
	and `GenericParameters' is moved into TypeDefinition/MethodDefinition.

	* Mono.Cecil/IGenericArgumentProvider.cs: New file.
	(IGenericArgumentProvider): New public interface.

	* Mono.Cecil/IGenericArgumentCollection.cs
	(IGenericArgumentCollection.Container): Changed type from
	`IGenericInstance' -> `IGenericArgumentProvider'.

	* Mono.Cecil/IGenericInstance.cs
	(IGenericInstance.Arguments): Renamed to `GenericArguments'.

	* Mono.Cecil/ITypeReference.cs