@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Fri Oct 28 16:44:52 CEST 2005
+// Wed Dec 14 21:26:07 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -212,6 +212,18 @@ namespace Mono.Cecil.Binary {
 			m_binaryWriter.Write (header.NumberOfDataDir);
 		}
 
+		public override void VisitDebugHeader (DebugHeader header)
+		{
+			m_binaryWriter.Write (header.Characteristics);
+			m_binaryWriter.Write (header.TimeDateStamp);
+			m_binaryWriter.Write (header.MajorVersion);
+			m_binaryWriter.Write (header.MinorVersion);
+			m_binaryWriter.Write ((uint) header.Type);
+			m_binaryWriter.Write (header.SizeOfData);
+			m_binaryWriter.Write (header.AddressOfRawData.Value);
+			m_binaryWriter.Write (header.PointerToRawData);
+		}
+
 		public override void VisitStandardFieldsHeader (PEOptionalHeader.StandardFieldsHeader header)
 		{
 			m_binaryWriter.Write (header.Magic);
@@ -364,12 +376,10 @@ namespace Mono.Cecil.Binary {
 			m_binaryWriter.BaseStream.Position = 0x200;
 
 			m_binaryWriter.Write (m_textWriter);
-			m_binaryWriter.Write (
-				new byte [(int) (m_textSect.SizeOfRawData - m_textWriter.BaseStream.Length)]);
+			m_binaryWriter.BaseStream.Position += m_textSect.SizeOfRawData - m_textWriter.BaseStream.Length;
 
 			m_binaryWriter.Write (m_relocWriter);
-			m_binaryWriter.Write (
-				new byte [(int) (m_relocSect.SizeOfRawData - m_relocWriter.BaseStream.Length)]);
+			m_binaryWriter.BaseStream.Position += m_relocSect.SizeOfRawData - m_relocWriter.BaseStream.Length;
 		}
 	}
 }
